# cmdop-bot

./: .gitignore  README.md  pyproject.toml  test_handlers.py
examples/: README.md  discord_bot.py  handler_example.py  multi_channel.py  slack_app.py  telegram_bot.py
src/cmdop_bot/: __init__.py  hub.py
src/cmdop_bot/channels/: __init__.py
src/cmdop_bot/channels/demo/: __init__.py  bot.py  formatter.py
src/cmdop_bot/channels/discord/: __init__.py  bot.py  embeds.py
src/cmdop_bot/channels/slack/: __init__.py  app.py  blocks.py
src/cmdop_bot/channels/telegram/: __init__.py  bot.py  formatter.py
src/cmdop_bot/channels/telegram/handlers/: __init__.py  agent.py  base.py  commands.py  files.py  machine.py  shell.py  skills.py
src/cmdop_bot/core/: __init__.py  base.py  cmdop_handler.py  handler.py  permissions.py
src/cmdop_bot/exceptions/: __init__.py  types.py
src/cmdop_bot/handlers/: __init__.py  agent.py  files.py  help.py  shell.py  skills.py
src/cmdop_bot/models/: __init__.py  message.py  permission.py  user.py
src/cmdop_bot/utils/: __init__.py  errors.py  escape.py  rate_limit.py
tests/: __init__.py  conftest.py  test_cmdop_handler.py  test_exceptions.py  test_formatters.py  test_handlers.py  test_models.py  test_permissions.py  test_rate_limit.py  test_skills.py
