[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdop-bot"
version = "0.1.5"
description = "CMDOP Bot - Multi-channel bot integrations for remote machine access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CMDOP Team", email = "team@cmdop.com" }
]
keywords = [
    "cmdop",
    "bot",
    "telegram",
    "discord",
    "slack",
    "automation",
    "ai-agent",
    "remote-access",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "cmdop",  # CMDOP Python SDK
    "rich>=13.0.0",  # For demo bot CLI formatting
]

[project.optional-dependencies]
telegram = ["aiogram>=3.20.0"]
discord = ["discord.py>=2.5.0"]
slack = ["slack-bolt>=1.23.0"]
all = [
    "aiogram>=3.4.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://cmdop.com"
Documentation = "https://cmdop.com/docs/"
Repository = "https://github.com/commandoperator/cmdop-bot"
Issues = "https://github.com/commandoperator/cmdop-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cmdop_bot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
cmdop = { path = "/Users/markinmatrix/Documents/htdocs/@CARAPIS/encar_parser_new/@projects/cmdop/projects/software/cmdop_sdk/python/cmdop_bot/../cmdop", editable = true }

